# climbing-analysis-toolbox

./: .gitignore  CONTRIBUTE.md  README.md  body_trajectory.py  pyproject.toml  requirements.txt
examples/: warp_video_example.sh
examples/scripts/: body_trajectory_demo.py  warp_video_demo.py  warp_video_example.sh
src/cruxes/: __init__.py  body_trajectory.py  cli.py  tools.py  warp_video.py
src/cruxes/utils/: body_trajectory.py  pose_helpers.py  warp_video.py
tools/: body_trajectory.py  warp_video.py
tools/utils/: draw_helpers.py  kamlan_filter.py  warp_video.py
utils/: body_trajectory.py  file_operations.py  kamlan_filter.py
